refactor: rename to jupyterhub_usage_quota_service

--- a/Dockerfile.jupyterhub
+++ b/Dockerfile.jupyterhub
@@ -9,8 +9,8 @@ RUN pip install --no-cache-dir \
 # Ensure jupyterhub-singleuser is available
 RUN python -m pip install --no-cache-dir jupyterhub
 
-# Copy the jupyterhub_usage_quota package and install it
-COPY pyproject.toml README.md /tmp/jupyterhub_usage_quota/
-COPY src/ /tmp/jupyterhub_usage_quota/src/
-RUN pip install --no-cache-dir /tmp/jupyterhub_usage_quota/ && \
-    rm -rf /tmp/jupyterhub_usage_quota
+# Copy the jupyterhub_usage_quota_service package and install it
+COPY pyproject.toml README.md /tmp/jupyterhub_usage_quota_service/
+COPY src/ /tmp/jupyterhub_usage_quota_service/src/
+RUN pip install --no-cache-dir /tmp/jupyterhub_usage_quota_service/ && \
+    rm -rf /tmp/jupyterhub_usage_quota_service
