feat: query Prometheus for user storage usage and quota
Replace mock-only PrometheusClient with real PromQL queries for
dirsize_hard_limit_bytes (quota) and dirsize_total_size_bytes (usage),
filtered by namespace. Falls back to randomized mock data
(50%, 95%, or error) when the namespace is unset in development mode.

Also, show last-updated timestamp and error state in the UI.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       JUPYTERHUB_API_TOKEN: "your-service-token-change-in-production"
       JUPYTERHUB_BASE_URL: "http://jupyterhub:8000"
       PROMETHEUS_URL: "http://prometheus:9090"
+      # PROMETHEUS_NAMESPACE: "prod"  # Set to filter Prometheus results by namespace
     networks:
       - jupyterhub-network
     depends_on:
