--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "jupyterhub-usage-quota-service"
 version = "0.1.0"
 description = "A JupyterHub service to display user storage (and eventually compute) quota and usage"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.11"
 license = {text = "BSD-3-Clause"}
 authors = [
     {name = "Tarashish Mishra", email = "tarashish@developmentseed.org"}
@@ -17,33 +17,16 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: BSD License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Framework :: Jupyter",
 ]
 
 dependencies = [
-    "jupyterhub>=2.4.0",
-    "fastapi[standard]",
-    "aiohttp>=3.8",
-    "jinja2>=3.0",
-    "itsdangerous>=2.0",  # Required by starlette SessionMiddleware
-    "httpx",
-]
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=7.0",
-    "pytest-asyncio>=0.21",
-    "pytest-cov>=4.0",         # Coverage reporting
-    "respx>=0.20",             # Mock httpx requests (for JupyterHub API)
-    "pytest-mock>=3.10",       # Enhanced mocking capabilities
-    "beautifulsoup4>=4.11",    # HTML parsing for template tests
-    "freezegun>=1.2",          # Time mocking for timestamps
-    "ruff>=0.4",
-    "mypy>=1.0",
-    "pre-commit>=3.0",
+    "jupyterhub>=5.0",
+    "fastapi[standard]>=0.100",
+    "jinja2>=3.1",
+    "itsdangerous>=2.2",  # Required by starlette SessionMiddleware
+    "httpx>=0.28",
 ]
 
 [project.urls]
@@ -55,7 +38,7 @@ packages = ["src/jupyterhub_usage_quota_service"]
 
 [tool.ruff]
 line-length = 100
-target-version = "py39"
+target-version = "py311"
 
 [tool.ruff.lint]
 select = [
@@ -83,3 +66,19 @@ python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0",
+    "pytest-asyncio>=1.0",
+    "pytest-cov>=7.0",         # Coverage reporting
+    "respx>=0.22",             # Mock httpx requests (for JupyterHub API)
+    "pytest-mock>=3.15",       # Enhanced mocking capabilities
+    "beautifulsoup4>=4.14",    # HTML parsing for template tests
+    "freezegun>=1.5",          # Time mocking for timestamps
+    "ruff>=0.15",
+    "mypy>=1.19",
+    "pre-commit>=4.0",
+    "pyflakes>=3.4",
+    "vulture>=2.14",
+]
